# AddLidar-API

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  TODO.md  TODO_POTREE.md  docker-compose.yml  index.html  lefthook.yml  local-pv.yaml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
addlidar-api/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
addlidar-api/app/: __init__.py  main.py
addlidar-api/app/internal/: __init__.py  admin.py
addlidar-api/app/routers/: __init__.py
celery-worker/: celery_worker.py  pyproject.toml  test_helpers.py
celery-worker/tests/tasks/: test_celery_tasks.py
kubernetes-api-wrapper/: README.md  main.py  main_addlidarmanager.py  pyproject.toml
lidar-api/: .env.example  .gitignore  Dockerfile  Dockerfile.worker  Makefile  README.md  TODO.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt  snapshot_prod_02_06_2025.db
lidar-api/kubernetes/: deployment.yaml  service.yaml
lidar-api/src/: celery_worker.py  main.py
lidar-api/src/api/: models.py  routes.py  sqlite.py
lidar-api/src/config/: settings.py
lidar-api/src/services/: README_kube.md  docker_service.py  job_status.py  k8s_addlidarmanager.py  parse_docker_error.py  working_output.py
lidar-api/src/tasks/: celery_tasks.py
lidar-api/src/utils/: file_utils.py
lidar-api/tests/api/: test_models.py
lidar-zip/: .gitignore  Dockerfile  Dockerfile-all  Makefile  README.md  archive_folders.sh  archive_one_folder.sh  archive_watcher.py  benchmark-copy-local.txt  benchmark-copy-ram.txt  check_db.py  (+22 more)
(+10 files in other folders)
