[project]
name = "addlidar-api"
version = "0.1.0"
description = "FastAPI application for LiDAR data processing"
readme = "README.md"
requires-python = ">=3.11.5"
dependencies = [
 "docker>=7.1.0",
    "fastapi[standard]>=0.115.8",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
