[project]
name = "lidar-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.5"
dependencies = [
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "kubernetes>=32.0.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
    "websockets>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest-mock>=3.14.0",
    "pytest>=8.3.4",
    "flake8>=7.1.2",
    "black>=25.1.0",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "tests"
]
